feat: Add misc pending changes and update docs (#9)
* feat: Add pending misc changes

* docs: Update README

* docs: Update docs
