# Task-1/src/controllers/interfaces/get-customer-invoices/config.ts
@@ -1,0 +1,4 @@
+export default interface IConfig {
+  build(customerID: string): void;
+  getCustomerID(): string;
+}
