# Task-1/src/controllers/interfaces/get-customer-invoices/result.ts
@@ -1,0 +1,6 @@
+import Response from '../../../dto/billing-api/customer/id/invoices/GET';
+
+export default interface IResult {
+  build(response: Response): void;
+  getResponse(): Response;
+}
